<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="8.1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/returnButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/back" />

        <TextView
            android:id="@+id/editEntryDateTextView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:gravity="center" />

        <Button
            android:id="@+id/deleteButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/delete"
            android:textSize="14sp" />
    </LinearLayout>

    <EditText
        android:id="@+id/editEntryEditText"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:ems="10"
        android:gravity="top|left"
        android:inputType="textPersonName" />

    <Button
        android:id="@+id/saveEntryButton"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="8"
        android:text="@string/save"
        android:textSize="18sp" />
</LinearLayout>