<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MemoryListActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1.4"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/searchEditText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName" />

            <Button
                android:id="@+id/searchWordButton"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/design_default_color_primary_dark"
                android:text="@string/searchWord"
                android:textColor="@android:color/white"
                android:textSize="18sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/searchButton"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="5sp"
                android:layout_weight="1"
                android:background="@color/design_default_color_primary_dark"
                android:text="@string/searchDate"
                android:textColor="@android:color/white"
                android:textSize="18sp" />

        </LinearLayout>

        <Button
            android:id="@+id/randomButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="5sp"
            android:layout_weight="1"
            android:background="@color/design_default_color_primary_dark"
            android:text="@string/random"
            android:textColor="@android:color/white"
            android:textSize="18sp" />

    </LinearLayout>

    <ListView
        android:id="@+id/entriesList"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.6" />

    <Button
        android:id="@+id/newEntryButton"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1.6"
        android:background="@android:color/holo_blue_light"
        android:text="@string/newEntry"
        android:textColor="@android:color/white"
        android:textSize="18sp" />

</LinearLayout>